--- a/config/pre_commit.yml
+++ b/config/pre_commit.yml
@@ -1,6 +1,4 @@
----
 :warnings_remove: []
-:warnings_add: []
-:checks_remove: []
-:checks_add:
-- :rubocop
+:warnings_add:
+  - :whitespace
+  - :rubocop
